--- a/diagnostico_unidade/css/style.css
+++ b/diagnostico_unidade/css/style.css
@@ -1,5 +1,59 @@
-* {
+*, ::after,
+::before {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+
+}
+body{
+    background-color: rgb(189, 247, 247);
+}
+
+.container{
+    max-width: 900px; /* Aumentei o tamanho máximo para comportar mais inputs em uma linha */
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.645);
+    
+}
+
+
+
+.title{
+    padding: 24px 15px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom: thin solid #ccc;
+}
+
+.form-box{
+    display: flex;
+    flex-direction: column;
+}
+
+.title{
+    font-size:18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.input-box{
+    margin-bottom: 20px;
+    flex:1;
+    border: 1px solid #ccc;
+   
+}
+
+.input-box label{
+    font-size:20px;
+    color: #fff;
+    background: #004584;
+    margin-bottom: 8px;
+    display: block;
+    text-transform: uppercase;
 
 }
