--- a/diagnostico_unidade/css/style.css
+++ b/diagnostico_unidade/css/style.css
@@ -1,59 +1,40 @@
-*, ::after,
-::before {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
+
 body{
-    background-color: rgb(189, 247, 247);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0c0ce94d;
 }
 
 .container{
-    max-width: 900px; /* Aumentei o tamanho máximo para comportar mais inputs em uma linha */
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.645);
-    
-}
-
-
-
-.title{
-    padding: 24px 15px;
-    text-align: center;
-    font-weight: bold;
-    text-transform: uppercase;
-    border-bottom: thin solid #ccc;
-}
-
-.form-box{
+    width: 80%;
+    height: 80vh;
     display: flex;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, .212);
+
+}
+
+.form{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    background-color: #fff;
+    padding: 3rem;
 }
 
-.title{
-    font-size:18px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.form-header title{
+    margin-bottom: 3rem;
     text-align: center;
-}
+    color:#fff;
 
-.input-box{
-    margin-bottom: 20px;
-    flex:1;
-    border: 1px solid #ccc;
-   
-}
-
-.input-box label{
-    font-size:20px;
-    color: #fff;
-    background: #004584;
-    margin-bottom: 8px;
-    display: block;
-    text-transform: uppercase;
 
 }
