--- a/diagnostico_unidade/css/style.css
+++ b/diagnostico_unidade/css/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 .container{
-    width: 80%;
+    width: 50%;
     height: 80vh;
     display: flex;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.394);
@@ -23,26 +23,64 @@ body{
 
 .form{
     width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
     flex-direction: column;
     background-color: #fff;
-    padding: 5rem;
+    padding: 3rem;
 }
 
 .form-header {
-    margin-bottom: 10rem;
+    margin-top: 15rem;
     display: flex;
     color:#fff;
     justify-content: space-between;
 
 }
 
+.title{
+    color: black;
+    text-align: center;
+
+}
+
 .input-group{
     display: flex;
-    height: 50%;
+    height: 100%;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 1rem 0;
+    text-transform: uppercase;
+    
 }
+
+.input-box{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.1rem;
+}
+
+
+#uni-saude,
+#end{ 
+    width: 300px;
+}
+
+#cnes,
+#cep,
+#uf{
+    width: 200px;
+}
+
+#municipio,
+#reg-saude{
+    width: 150px;
+}
+
+
+
+
+
+
